Prevent line break in tool-group.

--- a/src/stylesheets/components/_toolbar.scss
+++ b/src/stylesheets/components/_toolbar.scss
@@ -54,6 +54,8 @@
   }
 
   .tool-group {
+    white-space: nowrap;
+
     & + .tool-group {
       margin-left: $space-xs;
 
